--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,7 @@
 html,
 body {
+  background: #e0e0e0;
+  /* color: #4e924e; */
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
